fix(core): dual-path combat, follow, inventory, and world APIs
Call sites go through compat access instead of Paper methods that
vanish on older jars. Cart fuse/spawn stay version-forked so a later
1.16.5 NMS override does not rewrite 1.17+ behavior.