@@ -9,21 +9,21 @@ final class BotProfileCodec {
     private BotProfileCodec() {}
 
     static String sanitizeName(@Nullable String candidate) {
-        if (candidate == null || candidate.isBlank()) {
+        if (candidate == null || candidate.trim().isEmpty()) {
             return "CrystalBot";
         }
 
         String noSectionColors = candidate.replaceAll("(?i)\\u00A7[0-9A-FK-ORX]", "");
         String noAmpersandColors = noSectionColors.replaceAll("(?i)&[0-9A-FK-ORX]", "");
         String safe = noAmpersandColors.replaceAll("[^A-Za-z0-9_]", "_");
-        if (safe.isBlank()) {
+        if (safe.trim().isEmpty()) {
             safe = "CrystalBot";
         }
         return safe.length() > 16 ? safe.substring(0, 16) : safe;
     }
 
     static @Nullable String textureValueFromUrl(@Nullable String textureUrl) {
-        if (textureUrl == null || textureUrl.isBlank()) {
+        if (textureUrl == null || textureUrl.trim().isEmpty()) {
             return null;
         }
 
