@@ -1,6 +1,9 @@
 package com.monkey.ultimatebot.combat.mode.shared;
 
+
+import java.util.Collections;
 import java.util.List;
+import com.monkey.ultimatebot.compat.EntityCoordsAccess;
 import org.bukkit.Location;
 import org.bukkit.Material;
 import org.bukkit.entity.LivingEntity;
@@ -10,8 +13,16 @@ public final class CobwebCombatAwareness {
     private CobwebCombatAwareness() {}
 
     public static Containment inspect(LivingEntity entity) {
-        Location feet = new Location(entity.getWorld(), entity.getX(), entity.getY() + 0.05D, entity.getZ());
-        Location head = new Location(entity.getWorld(), entity.getX(), entity.getY() + entity.getHeight() * 0.75D, entity.getZ());
+        Location feet = new Location(
+                entity.getWorld(),
+                EntityCoordsAccess.getX(entity),
+                EntityCoordsAccess.getY(entity) + 0.05D,
+                EntityCoordsAccess.getZ(entity));
+        Location head = new Location(
+                entity.getWorld(),
+                EntityCoordsAccess.getX(entity),
+                EntityCoordsAccess.getY(entity) + entity.getHeight() * 0.75D,
+                EntityCoordsAccess.getZ(entity));
         boolean feetWeb = isCobweb(feet);
         boolean headWeb = isCobweb(head);
         boolean inside = feetWeb || headWeb;
@@ -22,12 +33,12 @@ public final class CobwebCombatAwareness {
         Location base = entity.getLocation().getBlock().getLocation();
         Location head = base.clone().add(0.0D, 1.0D, 0.0D);
         if (base.getBlock().getType() == Material.COBWEB && head.getBlock().getType() == Material.COBWEB) {
-            return List.of(base, head);
+            return Collections.unmodifiableList(java.util.Arrays.asList(base, head));
         }
         if (base.getBlock().getType() == Material.COBWEB) {
-            return List.of(base);
+            return Collections.unmodifiableList(java.util.Arrays.asList(base));
         }
-        return head.getBlock().getType() == Material.COBWEB ? List.of(head) : List.of();
+        return head.getBlock().getType() == Material.COBWEB ? Collections.unmodifiableList(java.util.Arrays.asList(head)) : Collections.emptyList();
     }
 
     public static boolean nearlyExiting(Vector position, Vector velocity) {
@@ -48,5 +59,42 @@ public final class CobwebCombatAwareness {
         return position.getBlock().getType() == Material.COBWEB;
     }
 
-    public record Containment(boolean inside, boolean nearlyExiting) {}
+    public static final class Containment {
+        private final boolean inside;
+        private final boolean nearlyExiting;
+
+        public Containment(boolean inside, boolean nearlyExiting) {
+            this.inside = inside;
+            this.nearlyExiting = nearlyExiting;
+        }
+
+        public boolean inside() {
+            return inside;
+        }
+        public boolean nearlyExiting() {
+            return nearlyExiting;
+        }
+
+        @Override
+        public boolean equals(Object obj) {
+            if (this == obj) {
+                return true;
+            }
+            if (!(obj instanceof Containment)) {
+                return false;
+            }
+            Containment other = (Containment) obj;
+            return inside == other.inside && nearlyExiting == other.nearlyExiting;
+        }
+
+        @Override
+        public int hashCode() {
+            return java.util.Objects.hash(inside, nearlyExiting);
+        }
+
+        @Override
+        public String toString() {
+            return "Containment[inside=" + inside + ", nearlyExiting=" + nearlyExiting + "]";
+        }
+    }
 }
